--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@
 # six==1.16.0
 # smmap==5.0.1
 # sniffio==1.3.1
-# streamlit==1.37.1
+streamlit==1.37.1
 # tenacity==8.5.0
 # toml==0.10.2
 # tornado==6.4.1
