--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ streamlit
 Pillow
 requests
 python-dotenv
+google-api-core==2.19.1
+google-api-python-client==2.142.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.64.0
