--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ pandas
 streamlit
 Pillow
 requests
-python-dotenv
+# python-dotenv
 google-api-core==2.19.1
 google-api-python-client==2.142.0
 google-auth==2.34.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.64.0
+proto-plus==1.24.0
+protobuf==5.27.3
+protoc-gen-openapiv2==0.0.1
